# monto-spell-check

./: LICENSE  README.md  monto-spell-check.cabal  stack.yaml
app/: Config.hs  Main.hs  Spellcheck.hs
src/Network/Monto/: Products.hs  Service.hs
src/Network/Monto/Common/: Types.hs
src/Network/Monto/Service/: Handler.hs  Messages.hs  Types.hs
