name:                monto-spell-check
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/remexre/monto-spell-check#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Ringo
maintainer:          remexre@gmail.com
copyright:           2017 Nathan Ringo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Monto.Common.Types
                     , Network.Monto.Products
                     , Network.Monto.Service
                     , Network.Monto.Service.Messages
                     , Network.Monto.Service.Types
  other-modules:       Network.Monto.Service.Handler
  build-depends:       aeson >= 1.1 && < 2
                     , base >= 4.7 && < 5
                     , binary >= 0.8 && < 1
                     , bytestring >= 0.10 && < 1
                     , containers >= 0.5 && < 1
                     , http-types >= 0.9 && <1
                     , split >= 0.2 && < 1
                     , text >= 1.2 && < 2
                     , wai >= 3.2 && < 4
                     , warp >= 3.2 && < 4
  default-language:    Haskell2010

executable monto-spell-check
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Config
                     , Spellcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson >= 1.1 && < 2
                     , base
                     , bytestring >= 0.10 && < 1
                     , containers >= 0.5 && < 1
                     , haspell >= 1.1 && < 2
                     , monto-spell-check
                     , optparse-applicative >= 0.14 && < 1
                     , split >= 0.2 && < 1
                     , text >= 1.2 && < 2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/remexre/monto-spell-check
